# Quadrocopter-FW

./: .cproject  .gitignore  .project  CMakeLists.txt  STM32H723ZGTX_FLASH.ld
Src/: main.c
Src/Config/: board_config.h  drivers_config.h
Src/Devices/: icm45686.c  icm45686.h  led.c  led.h
Src/Drivers/: dma.c  dma.h  gpio.c  gpio.h  mcu_init.c  mcu_init.h  rcc.c  rcc.h  spi.c  spi.h  systick.c  systick.h
Src/Flight/: control_loop.c  control_loop.h
Src/System/: fsm.c  fsm.h  scheduler.c  scheduler.h  tasks.c  tasks.h
Src/Utils/: utils.c  utils.h
Startup/: startup_stm32h723zgtx.s
